build: remove many unused plugins
- Graal native tools
- Dependency updates
- Task tree inspection

Also simplifies other setup:

- Simpler sourceSet filter for Sonar
- Group all the tasks together